--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -10,13 +10,18 @@
 /// @link   https:spigotdesign.com
 ////
 
+@use "sass:math";
+
 @import "app";
 @import "app-content";
 @import "app-footer";
 @import "app-header";
+@import "app-header_nav";
 @import "app-main";
 @import "app-search";
 @import "archive-header";
+@import "blog-main";
+@import "blog-sidebar";
 @import "buttons";
 @import "cards";
 @import "comments";
@@ -28,7 +33,6 @@
 @import "media-meta";
 @import "images";
 @import "map";
-@import "nav-menu";
 @import "nav-pagination";
 @import "nav-toggle";
 @import "notices";
@@ -40,4 +44,3 @@
 @import "ribbons";
 @import "sidebar";
 @import "tooltips";
-@import "widget";
