--- a/resources/scss/components/_app-search.scss
+++ b/resources/scss/components/_app-search.scss
@@ -6,11 +6,13 @@
 
 ////
 
+@use "sass:math";
+
 .app-search {
     margin: 0;
     position: absolute;
-    right: $margin;
-    top: $margin / 3;
+    right: 0;
+    top: 0;
 
     @include mq(phone-only) {
         right: 0;
@@ -43,43 +45,37 @@
         font-weight: normal;
         background: transparent url(../svg/search.svg) 10px 50% no-repeat;
         background-size: 16px 16px;
-        color: $blue-darker;
+        color: $search-bg-color;
         outline: none;
         height: 33px;
         transition: all .3s ease-in-out;
 
         @include font-size(14px);
 
-        .page-template-landing & {
-            @include mq(desktop-nav) {
-                background: transparent url(../svg/search-white.svg) 10px 50% no-repeat;
-                background-size: 16px 16px;
-            }
-        }
 
         // Mobile
-        @include mq(mobile-nav) {
-            width: 90%;
+        @include mq(phone-only) {
+            width: 96%;
             margin-left: 5%;
-            background: $blue-darker url(../svg/search-white.svg) 10px 50% no-repeat;
+            background: $search-bg-color url(../svg/search-white.svg) 10px 50% no-repeat;
             background-size: 16px 16px;
             color: $white;
 
             &:focus {
                 width: 90% !important;
-                background: $blue-darker url(../svg/search-white.svg) 10px 50% no-repeat;
+                background: $search-bg-color url(../svg/search-white.svg) 10px 50% no-repeat;
                 background-size: 16px 16px;
             }
         }
     }
 
     input[type="search"]:focus {
-        width: 420px;
+        width: math.div(320, 16) * 1rem;
         outline: none;
         color: $white;
         background-image: url(../svg/search-white.svg);
-        background-color: $blue-darker;
-        box-shadow: inset 0 0 2px rgba($blue-darker, 0.2);
+        background-color: $search-bg-color;
+        box-shadow: inset 0 0 2px rgba($search-bg-color, 0.2);
         cursor: text;
 
         @include mq(phone-only) {
