--- a/resources/scss/editor.scss
+++ b/resources/scss/editor.scss
@@ -10,6 +10,10 @@
 /// @link   https:spigotdesign.com
 ////
 
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,400;0,600;1,400;1,600&family=Rubik:wght@500&display=swap');
+
+
 // Settings
 @import 'settings/_index';
 
@@ -22,9 +26,8 @@
 
 	// Elements
 	@import 'elements/_index';
-
 	@import 'components/_index';
-	
+
 	// Blocks
 	@import 'blocks/_index';
 	@import 'blocks/core/button/edit';
@@ -40,10 +43,6 @@
 	@import 'blocks/core/pullquote/edit';
 	@import 'blocks/core/quote/edit';
 	@import 'blocks/core/separator/edit';
-
-
-
-
 	@import 'utilities/_index';
 }
 
