--- a/resources/scss/components/_page-builder.scss
+++ b/resources/scss/components/_page-builder.scss
@@ -14,167 +14,25 @@
     }
 }
 
-// Chevrons
-
-.chevron {
-    &.center {
-        .fl-html {
-            display: flex;
-            justify-content: center;
+.spigot-hover-card {
+    min-height: 21rem;
+    border-radius: $border-radius !important;
+    overflow: hidden;
+    
+    .entry__header {
+        text-shadow: 0 0 .75rem rgba($black, 30%);
+        h2 {
+            @include font-size(34px);
         }
-    }
-}
-
-.bp-flipbox-wrapper {
-    .bp-flipbox-back-content, .bp-flipbox-front-content {
-        top: 80% !important;
-    }
-}
-
-.fl-module-callout {
-    .fl-callout-text {
-        *:last-child {
-            margin-bottom: 0;
-        }
-    }
-}
-
-.fl-accordion {
-    .fl-accordion-item {
-        background-color: $white;
-        border: 0;
-        border-radius: 3px;
-        box-shadow: 0 1px 3px 0 rgba($shadow-blue, 0.2);
-    }
-
-    .fl-accordion-button-label {
-        color: $headings-color;
-        font-weight: $bold-font-weight;
-
-        &:focus {
-            outline: 1px solid transparent;
-        }
-    }
-}
-
-.home-marquee {
-    .fl-rich-text {
-        p {
-            font-weight: 800;
-            color: $white;
-            line-height: 1.2;
-        }
-
         span {
-            display: block;
+            font-family: $headings-font-family;
+            text-transform: uppercase;
+            @include font-size(17px);
+            color: $white;
         }
     }
 }
 
-.hero-grid {
-    position: relative;
-
-    .fl-row-content-wrap:after {
-        background-image: url("../svg/aai-icon-white.svg");
-        background-position: 50% 120%;
-        background-repeat: no-repeat;
-        content: "";
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 0px;
-        opacity: 0.15;
-
-        @include mq(tablet-portrait-up) {
-            background-position: 50% 113%;
-        }
-
-
-        @include mq(tablet-landscape-up) {
-            background-position: 50% 137%;
-        }
-    }
-
-    .fl-col-group {
-        @include mq(phone-only) {
-            justify-content: center;
-        }
-    }
-
-    .fl-col {
-        background-color: rgba($white, 0.4);
-        box-shadow: 0px 10px 24px rgba($black, 0.12);
-        margin: .25rem;
-        width: 80%;
-        padding-top: 80%;
-        border-radius: 300px;
-        position: relative;
-        flex: 0 1 80%;
-
-        @include mq(tablet-portrait-up) {
-            width: 49.5%;
-            flex-basis: 47.5%;
-            padding-top: 47.5%;
-        }
-
-
-        @include mq(tablet-landscape-up) {
-            width: 23.5%;
-            flex-basis: 24%;
-            padding-top: 24%;
-        }
-    }
-
-    .fl-col-content {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        padding: $margin;
-    }
-
-    .fl-callout-title {
-        font-size: 20vw;
-
-        @include mq(tablet-portrait-up) {
-            font-size: 10vw;
-        }
-
-
-        @include mq(tablet-landscape-up) {
-            font-size: 4.5vw;
-        }
-    }
-
-    .fl-callout-text {
-        p {
-            font-weight: $mid-font-weight;
-        }
-    }
-}
-
-
-// Boxed columns
-.fl-col {
-    &.boxed {
-        .fl-col-content {
-            box-shadow: 0 1px 3px 0 rgba($shadow-blue, 0.2);
-            //margin: .5rem;
-            padding-top: 1rem;
-        }
-       
-
-    }
-
-    &.schedule {
-        .fl-col-content { 
-
-            background-color: $white;
-        }
-        .uabb-business-hours-container {
-            padding: 0 !important;
-        }
-    }
-
-
+.section-heading {
+    text-transform: uppercase;
 }
