--- a/resources/scss/components/_post-nav.scss
+++ b/resources/scss/components/_post-nav.scss
@@ -19,7 +19,7 @@
         display: block;
         text-align: center;
         border-radius: $border-radius;
-        padding: ($margin / 2) 0;
+        padding: ($margin * 0.5) 0;
         margin: 0;
         border-radius: 3px;
 
