--- a/resources/scss/components/_sidebar.scss
+++ b/resources/scss/components/_sidebar.scss
@@ -8,7 +8,18 @@
 
 .sidebar {
 
-	&--primary {}
+	&--primary {
+		
+		flex: 0 1 100%;
+		order: 2;
+		background-color: $green-lightest;
+		padding: 0;
+		
+		@include mq(tablet-portrait-up) {
+			flex-basis: 20rem;
+			order: 1;
+		}
+	}
 
 	&__title {}
 }
