--- a/resources/scss/elements/_paragraphs.scss
+++ b/resources/scss/elements/_paragraphs.scss
@@ -3,7 +3,8 @@
 p {
   margin-bottom: 1.5rem;
   font-family: $body-font-family;
-  @include font-size(18px);
+  font-weight: $body-font-weight;
+  @include font-size(16px);
 
   .entry__content & {
     &:last-child {
@@ -20,4 +21,13 @@ p {
     font-family: $font-family;
     font-style: italic;
   }
+  
+  &:empty {
+    display: none;
+    margin-bottom: 0;
+  }
+}
+
+p:empty {
+  display: none !important;
 }
