--- a/resources/scss/tools/_font-size.scss
+++ b/resources/scss/tools/_font-size.scss
@@ -6,15 +6,17 @@
 
 ////
 
+@use "sass:math";
+
 $converted-base-line-height:    ($base-line-height * 16) * 1px;
 
 
 @mixin font-size($font-size, $line-height: auto) {
     font-size: $font-size;
-    font-size: ($font-size / $base-font-size) * 1rem;
+    font-size: math.div($font-size, $base-font-size) * 1rem;
 
     @if $line-height == auto {
-        line-height: ceil($font-size / $converted-base-line-height) * ($converted-base-line-height / $font-size);
+        line-height: ceil(math.div($font-size, $converted-base-line-height)) * math.div($converted-base-line-height, $font-size);
     }
 
     @else {
@@ -23,7 +25,7 @@ $converted-base-line-height:    ($base-line-height * 16) * 1px;
             line-height: $line-height;
         }
 
-        @elseif ($line-height != none and $line-height != false) {
+        @else if ($line-height != none and $line-height != false) {
             @warn "D’oh! ‘#{$line-height}’ is not a valid value for `line-height`."
         }
 
