Added video block

--- a/resources/scss/blocks/__index.scss
+++ b/resources/scss/blocks/__index.scss
@@ -24,6 +24,7 @@
 @import 'core/separator/separator.scss';
 @import 'core/table/table.scss';
 @import 'core/verse/verse.scss';
+@import 'core/video/video.scss';
 @import 'core/widget/widget.scss';
 
 // Widgets
